# BD2ModManager

./: .gitignore  README.md  main.py  mods.json  pyproject.toml  runasadmin_main.py
.github/: FUNDING.yml
scripts/: compile_translations.bat  find_unfinished_translations.py  generate_manifest.py  generate_translations.bat  get_asset_hash.py  get_mods_hash.py  rename_char_resources.py  update_resources.py  update_translations.bat  update_translations_from_json.py
src/: manifest.json  manifest_v2-template.json  manifest_v2.json  version.py
src/BD2ModManager/: __init__.py  bd2_data.py  config.py  core.py  errors.py  models.py
src/controllers/: __init__.py  characters_controller.py  config_controller.py  main_controller.py  mainwindow_controller.py  mod_manager_controller.py  mods_controller.py  profile_manager_controller.py  profiles_controller.py
src/data/: authors.csv  characters.csv  datings.csv  npcs.csv
src/gui/: __init__.py  config.py  main.py
src/models/: __init__.py  config_model.py  mod_manager_model.py  models.py  mods_model.py  profile_manager_model.py
src/pages/: select_game_directory.py
src/resources/: characters.qrc  icons.qrc  icons_rc.py
src/services/: BD2_game_data.py  __init__.py  data_manager.py  game_data.py  mod_preview.py  notification_service.py  profiles.py  update_manager.py  workers.py
src/themes/: __init__.py  theme_manager.py
src/translations/: ja-JP.qm  ja-JP.ts  ko-KR.qm  ko-KR.ts  pt-BR.qm  pt-BR.ts  zh-CN.qm  zh-CN.ts
src/utils/: BD2GameData.py  errors.py  files.py  logger.py  models.py  paths.py  theme_manager.py
(+49 files in other folders)
