[project]
name = "BD2ModManager"
version = "3.0.0-dev"
requires-python = ">=3.13"
dependencies = [
    "packaging>=25.0",
    "pefile>=2024.8.26",
    "py7zr>=1.0.0",
    "pyqt6>=6.9.1",
    "pyside6>=6.9.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.11.12",
]
