[project]
name = "BD2ModManager"
version = "3.2.3"
requires-python = ">=3.13"
dependencies = [
    "packaging>=25.0",
    "pillow>=11.2.1",
    "py7zr>=1.0.0",
    "pyinstaller>=6.14.2",
    "pyside6>=6.9.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-qt>=4.5.0",
    "ruff>=0.11.12",
]
